[tool.poetry]
name = "data-analytics-challenge"
version = "0.1.0"
description = ""
authors = ["nikolasschriefer <info@nikolasschriefer.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3"
jupyter = "^1.0"
matplotlib = "^3.4"
statsmodels = "^0.12"
sklearn = "^0.0"
scikit-learn = "^0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
